# mkbsd

./: .gitignore  Dockerfile  Dockerfile.python  README.md  google_collab_mkbsd_download.ipynb  images.json  mkbsd.bat  mkbsd.dart  mkbsd.go  mkbsd.java  mkbsd.js  mkbsd.mjs  mkbsd.nim  mkbsd.nimble  mkbsd.php  mkbsd.py  mkbsd.rb  package-lock.json  package.json  pubspec.yaml  requirements.txt  run.js
.github/workflows/: mkbsd.yml
MKBSD/: Cargo.toml
MKBSD/src/: main.rs
mkbsdSharp/: .gitignore  Program.cs  mkbsdSharp.sln
nextjs/: README.md  next.config.mjs  package.json  pnpm-lock.yaml
nextjs/src/app/: page.tsx
nextjs/src/components/: LazyImage.tsx
rust/: Cargo.toml
rust/src/: main.rs
